# Ecommerce-RestApi-DRF

./: .gitignore  Dockerfile  Makefile  docker-compose.yaml  manage.py  pyproject.toml  pytest.ini  requirements.txt
EccomerceRestApi/: asgi.py  settings.py  urls.py  wsgi.py
base_utils/: emails_handler.py
cart/: admin.py  enums.py  managers.py  models.py  serializers.py  urls.py  views.py
category/: admin.py  managers.py  models.py  serializers.py  urls.py  views.py
common/: managers.py  middleware.py  mixins.py  models.py  notifier.py  permissions.py  serializers.py  utils.py  utlis.py  validators.py
inventory/: admin.py  enums.py  filters.py  managers.py  models.py  serializers.py  urls.py  views.py
invoices/: admin.py  enums.py  managers.py  models.py  notifier.py  serializers.py  urls.py  views.py
orders/: admin.py  apps.py  enums.py  filters.py  managers.py  models.py  notifier.py  serializers.py  urls.py  views.py
payments/: admin.py  enums.py  managers.py  models.py  serializers.py  urls.py  views.py
products/: admin.py  enums.py  filters.py  managers.py  models.py  serializers.py  urls.py  views.py
refunds/: admin.py  enums.py  managers.py  models.py  notifier.py  serializers.py  urls.py  views.py
reviews/: admin.py  managers.py  models.py  serializers.py  urls.py  utils.py  views.py
shipping/: admin.py  enums.py  filters.py  managers.py  models.py  serializers.py  urls.py  views.py
templates/: base.html
tests/: conftest.py
userAuth/: apps.py  exceptions.py  managers.py  serializers.py  signals.py  tests.py  urls.py  validators.py  views.py
(+119 files in other folders)
